# ComplianceModel

ComplianceQAPipeline/: .env  README.md  main.py  pyproject.toml
ComplianceQAPipeline/backend/: requirements.txt
ComplianceQAPipeline/backend/scripts/: index_documents.py
ComplianceQAPipeline/backend/src/api/: server.py
ComplianceQAPipeline/backend/src/graph/: nodes.py  state.py  workflow.py
